--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,8 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
 <!-- Material Design Bootstrap -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+<link rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Merienda:wght@400;700&display=swap">
 
 <link rel="stylesheet" href="{{url_for('static',filename='css/styles.css')}}">
 
