--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -20,7 +20,7 @@
                         class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-light" href="/">About</a>
+                <a class="nav-link text-light" href="{{ url_for('main.about') }}">About</a>
             </li>
         </ul>
 
