--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -29,6 +29,10 @@
             <li>
               <a class="nav-link text-white pr-4" aria-haspopup="true" aria-expanded="false" href="{{url_for('main.profile',uname=current_user.username)}}">🙎‍♂️Profile</a>
             </li>
+
+            <li>
+                <a class="nav-link text-white pr-4" aria-haspopup="true" aria-expanded="false" href="{{url_for('main.subscriber',uname=current_user.username)}}">🙎‍♂️Subscribe</a>
+            </li>
       
             <li>
               <a class="nav-link text-white pr-4" aria-haspopup="true" aria-expanded="false" href = "{{url_for('main.allBlogs')}}">AllBlogs</a>
